--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+title: 0xS3rGio's Cyber Security Blog
+#description: 0xS3rGio's Cyber Security Blog
+show_downloads: false
+show_repo: false
 theme: jekyll-theme-hacker
+
+gems:
+  - jekyll-sitemap
