--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 0xS3rGio's Cyber Security Blog
-#description: 0xS3rGio's Cyber Security Blog
+title: root💀redTeam:~#
+#description: Try Harder!!!
 show_downloads: false
 show_repo: false
 theme: jekyll-theme-hacker
