--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: manas3💀redTeam:~#
 #description: Try Harder!!!
 show_downloads: false
 show_repo: false
-theme: jekyll-theme-hacker
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-sitemap
